First changes to code