@@ -25,14 +25,12 @@
  * those of third-party libraries, please see the product release notes.
  */
 
-
 package edu.si.sidora.tabularmetadata.testframework;
 
-import static com.googlecode.totallylazy.Iterators.range;
-import static com.googlecode.totallylazy.Sequences.forwardOnly;
-import static com.googlecode.totallylazy.Sequences.sequence;
 import static edu.si.sidora.tabularmetadata.testframework.TestUtilities.randomValues;
-import static edu.si.sidora.tabularmetadata.testframework.TestUtilities.toPotentialAssignment;
+import static java.util.Arrays.stream;
+import static java.util.stream.Collectors.toList;
+import static java.util.stream.Stream.iterate;
 
 import java.util.List;
 
@@ -40,45 +38,21 @@ import org.junit.experimental.theories.ParameterSignature;
 import org.junit.experimental.theories.ParameterSupplier;
 import org.junit.experimental.theories.PotentialAssignment;
 
-import com.googlecode.totallylazy.Callable1;
-import com.googlecode.totallylazy.Sequence;
-
 import edu.si.sidora.tabularmetadata.datatype.DataType;
-import edu.si.sidora.tabularmetadata.testframework.TestUtilities.RandomValuesForAType;
 
 public class RowsOfRandomValuesForAllTypesSupplier extends ParameterSupplier {
 
-    @Override
-    public List<PotentialAssignment> getValueSources(final ParameterSignature sig) {
+	@Override
+	public List<PotentialAssignment> getValueSources(final ParameterSignature sig) {
 
-        final RowsOfRandomValuesForAllTypes metadata = sig.getAnnotation(RowsOfRandomValuesForAllTypes.class);
-        final short valuesPerType = metadata.valuesPerType();
-        final short numRowsPerType = metadata.numRowsPerType();
+		final RowsOfRandomValuesForAllTypes metadata = sig.getAnnotation(RowsOfRandomValuesForAllTypes.class);
+		final short valuesPerType = metadata.valuesPerType();
+		final short numRowsPerType = metadata.numRowsPerType();
 
-        return sequence(DataType.values()).flatMap(rowsOfRandomValuesPerType(numRowsPerType, valuesPerType))
-                .map(toPotentialAssignment()).toList();
+		return stream(DataType.values())
+				.flatMap(type -> iterate(0, i -> i + 1).limit(numRowsPerType)
+						.map(i -> randomValues(type, valuesPerType)))
+				.map(from -> PotentialAssignment.forValue(null, from)).collect(toList());
 
-    }
-
-    private static Callable1<DataType, Sequence<RandomValuesForAType>> rowsOfRandomValuesPerType(
-            final short numRowsPerType, final short valuesPerType) {
-        return new Callable1<DataType, Sequence<RandomValuesForAType>>() {
-
-            @Override
-            public Sequence<RandomValuesForAType> call(final DataType type) {
-                return forwardOnly(range(0, numRowsPerType)).map(randomValuesForAType(valuesPerType, type));
-            }
-        };
-    }
-
-    static Callable1<Number, RandomValuesForAType> randomValuesForAType(
-            final short valuesPerType, final DataType type) {
-        return new Callable1<Number, RandomValuesForAType>() {
-
-            @Override
-            public RandomValuesForAType call(final Number input) {
-                return randomValues(type, valuesPerType);
-            }
-        };
-    }
+	}
 }
